Update java-versions-and-features.md